Remind user to allow access to the Google Play sheriff.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -153,6 +153,7 @@
   "donate-to-recipient" : "Donate to <0>{recipientName}</0>",
   "donations-android-prohibited" : "Donations feature is prohibited in Android apps downloaded from Google Play according to <0>Google Play Payments Policy</0>.<1/><2/>Please use Moera web client for this.",
   "dont-ask-next-time" : "Don't ask next time",
+  "do-want-allow-android-google-play" : "<b>Do you want your blog to be accessible with Moera for Android app installed from Google Play?</b><br><br>Answering \"Yes\" will allow the sheriff to read the content of your blog and decide (according to the rules), which posts or comments are to be hidden in Moera for Android.",
   "download" : "Download",
   "downloading-image" : "Downloading image...",
   "do-you-have-blog" : "Do you have a Moera blog?",
@@ -524,6 +525,7 @@
   "registered-name-secret" : "Registered Name Secret",
   "register-new-name" : "Register a New Name",
   "reject" : "Reject",
+  "remind-later" : "Remind later",
   "rename" : "Rename",
   "rename-token" : "Rename a Token",
   "reply" : "Reply",
@@ -751,6 +753,7 @@
   "size" : "Size",
   "spoiler" : "Spoiler",
   "spoiler-alert" : "spoiler!",
+  "stop-asking" : "Stop asking",
   "strikeout" : "Strikeout",
   "subscribe" : "Subscribe",
   "subscribe-back" : "Subscribe back",
@@ -826,7 +829,7 @@
   "view-previous-complains" : "View previous complaints",
   "view-source" : "View source",
   "view-source-title" : "View Source",
-  "want-allow-android-google-play" : "I want my blog to be accessible with Moera for Android app installed from Google Play. I allow the sheriff of Moera for Android app to read the content of by blog and decide (according to the rules), which posts or comments are to be hidden from the app",
+  "want-allow-android-google-play" : "I want my blog to be accessible with Moera for Android app installed from Google Play. I allow the sheriff to read the content of my blog and decide (according to the rules), which posts or comments are to be hidden in Moera for Android",
   "want-delete-addon" : "Do you really want to delete the add-on \"{name}\"?",
   "want-delete-draft" : "Do you really want to delete the draft?",
   "want-delete-token" : "Do you really want to delete the token \"{name}\"?",
