--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -153,6 +153,7 @@
   "donate-to-recipient" : "Донаты для <0>{recipientName}</0>",
   "donations-android-prohibited" : "Функция донатов запрещена в приложениях для Android, загруженных из Google Play, в соответствии с <0>Политикой платежей Google Play</0>.<1/><2/> Пожалуйста, используйте веб-клиент Moera для этого.",
   "dont-ask-next-time" : "Не спрашивать следующий раз",
+  "do-want-allow-android-google-play" : "<b>Вы хотите, чтобы ваш блог был виден в приложении Moera для Android, установленном из Google Play?</b><br><br>Ответ \"Да\" означает, что вы разрешаете шерифу читать содержимое вашего блога и решать (в соответствии с правилами), какие посты или комментарии следует скрыть в Moera для Android.",
   "download" : "Скачать",
   "downloading-image" : "Скачивание картинки...",
   "do-you-have-blog" : "У вас есть блог на Moera?",
@@ -524,6 +525,7 @@
   "registered-name-secret" : "Секрет зарегистрированного имени",
   "register-new-name" : "Регистрация нового имени",
   "reject" : "Отклонить",
+  "remind-later" : "Напомнить позже",
   "rename" : "Переименовать",
   "rename-token" : "Переименовать токен",
   "reply" : "Ответить",
@@ -751,6 +753,7 @@
   "size" : "Размер",
   "spoiler" : "Спойлер",
   "spoiler-alert" : "спойлер!",
+  "stop-asking" : "Больше не спрашивать",
   "strikeout" : "Зачёркнутый",
   "subscribe" : "Подписаться",
   "subscribe-back" : "Подписаться в ответ",
@@ -826,7 +829,7 @@
   "view-previous-complains" : "Показать предыдущие жалобы",
   "view-source" : "Показать исходный текст",
   "view-source-title" : "Показать исходный текст",
-  "want-allow-android-google-play" : "Я хочу, чтобы мой блог был виден в приложении Moera для Android, установленном из Google Play. Я разрешаю шерифу приложения Moera для Android читать содержимое блога и решать (в соответствии с правилами), какие посты или комментарии следует скрыть в этом приложении",
+  "want-allow-android-google-play" : "Я хочу, чтобы мой блог был виден в приложении Moera для Android, установленном из Google Play. Я разрешаю шерифу читать содержимое моего блога и решать (в соответствии с правилами), какие посты или комментарии следует скрыть в Moera для Android",
   "want-delete-addon" : "Вы действительно хотите удалить дополнение \"{name}\"?",
   "want-delete-draft" : "Вы действительно хотите удалить черновик?",
   "want-delete-token" : "Вы действительно хотите удалить токен \"{name}\"?",
