--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -153,6 +153,7 @@
   "donate-to-recipient" : "Донати для <0>{recipientName}</0>",
   "donations-android-prohibited" : "Функція донатів заборонена в додатках для Android, завантажених з Google Play, відповідно до <0>Політики платежів Google Play</0>.<1/><2/> Будь ласка, використовуйте веб-клієнт Moera для цього.",
   "dont-ask-next-time" : "Не питати наступного разу",
+  "do-want-allow-android-google-play" : "<b>Ви бажаєте, щоб ваш блог було видно у додатку Moera для Android, встановленому із Google Play?</b><br><br>Відповідь \"Так\" означає, що ви дозволяєте шерифу читати вміст вашого блогу і вирішувати (відповідно до правил), які пости або коментарі слід приховати у Moera для Android.",
   "download" : "Завантажити",
   "downloading-image" : "Завантаження картинки...",
   "do-you-have-blog" : "Ви маєте блог на Moera?",
@@ -524,6 +525,7 @@
   "registered-name-secret" : "Секрет зареєстрованого імені",
   "register-new-name" : "Реєстрація нового імені",
   "reject" : "Відхилити",
+  "remind-later" : "Нагадати пізніше",
   "rename" : "Перейменувати",
   "rename-token" : "Перейменувати токен",
   "reply" : "Відповісти",
@@ -751,6 +753,7 @@
   "size" : "Розмір",
   "spoiler" : "Спойлер",
   "spoiler-alert" : "спойлер!",
+  "stop-asking" : "Припинити питати",
   "strikeout" : "Закреслений",
   "subscribe" : "Підписатись",
   "subscribe-back" : "Підписатись у відповідь",
@@ -826,7 +829,7 @@
   "view-previous-complains" : "Показати попередні скарги",
   "view-source" : "Показати початковий текст",
   "view-source-title" : "Показати початковий текст",
-  "want-allow-android-google-play" : "Я бажаю, щоб мій блог було видно у додатку Moera для Android, що встановлений із Google Play. Я дозволяю шерифу додатку Moera для Android читати вміст блогу і вирішувати (відповідно до правил), які пости або коментарі слід приховати у цьому додатку",
+  "want-allow-android-google-play" : "Я бажаю, щоб мій блог було видно у додатку Moera для Android, що встановлений із Google Play. Я дозволяю шерифу читати вміст мого блогу і вирішувати (відповідно до правил), які пости або коментарі слід приховати у Moera для Android",
   "want-delete-addon" : "Ви дійсно бажаєте видалити доповнення \"{name}\"?",
   "want-delete-draft" : "Ви дійсно бажаєте видалити чернетку?",
   "want-delete-token" : "Ви дійсно бажаєте видалити токен \"{name}\"?",
