Flashbox about subscription/unsubscription.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -848,6 +848,7 @@
   "you-at-home" : "You are at your home node",
   "you-can-copy-token" : "You can now copy your new token. For security reasons, this cannot be done later.",
   "you-friends" : "You are friends",
+  "you-no-longer-subscribed" : "You are no longer subscribed",
   "your-news" : "Your news",
   "your-password" : "Your password",
   "your-profile" : "Your profile",
