--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -848,6 +848,7 @@
   "you-at-home" : "Это ваш домашний блог",
   "you-can-copy-token" : "Сейчас вы можете скопировать ваш новый токен. По соображениям безопасности, это нельзя будет сделать позднее.",
   "you-friends" : "Вы друзья",
+  "you-no-longer-subscribed" : "Вы больше не подписаны",
   "your-news" : "Ваши новости",
   "your-password" : "Ваш пароль",
   "your-profile" : "Ваш профиль",
