--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -848,6 +848,7 @@
   "you-at-home" : "Це ваш домашній блог",
   "you-can-copy-token" : "Зараз ви можете скопіювати ваш новий токен. З міркувань безпеки, це не можна буде зробити пізніше.",
   "you-friends" : "Ви друзі",
+  "you-no-longer-subscribed" : "Ви більше не підписані",
   "your-news" : "Ваші новини",
   "your-password" : "Ваш пароль",
   "your-profile" : "Ваш профіль",
