Fixes in FriendGroupsDialog
* Renamed new group visibility levels to make them understandable.
* Added caption to the visibility levels pop-up.
* Added checkmark to PrincipalSelect to show the current value.
* Do not change the length of the new group name input when losing focus.
* Do not change the list of the available groups when the dialog is being submitted.
* Show the correct visibility level for all friend groups in PeopleTabs.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -214,6 +214,11 @@
   "friend" : "Friend",
   "friend-groups" : "Groups of friends...",
   "friend-groups.friends" : "Friends",
+  "friend-group-visibility" : {
+    "admin" : "Private",
+    "private" : "Members only",
+    "public" : "Public"
+  },
   "from-computer" : "From Computer",
   "from-device" : "From Device",
   "from-internet" : "From Internet",
@@ -829,6 +834,7 @@
   "view-previous-complains" : "View previous complaints",
   "view-source" : "View source",
   "view-source-title" : "View Source",
+  "visibility" : "Visibility",
   "want-allow-android-google-play" : "I want my blog to be accessible with Moera for Android app installed from Google Play. I allow the sheriff to read the content of my blog and decide (according to the rules), which posts or comments are to be hidden in Moera for Android",
   "want-delete-addon" : "Do you really want to delete the add-on \"{name}\"?",
   "want-delete-draft" : "Do you really want to delete the draft?",
