Button for creating a group of friends on the People page.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -5,6 +5,7 @@
   "add-donation" : "Add Donation",
   "add-donation-button" : "Add donation",
   "add-friend" : "Add to friends",
+  "add-friend-group" : "Add group of friends",
   "add-group" : "Add group",
   "additional" : "Additional",
   "add-me-friend-group" : "Add me to the group of friends \"{group}\"",
