--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -5,6 +5,7 @@
   "add-donation" : "Додати донат",
   "add-donation-button" : "Додати донат",
   "add-friend" : "Додати у друзі",
+  "add-friend-group" : "Додати групу друзів",
   "add-group" : "Додати групу",
   "additional" : "Додаткові",
   "add-me-friend-group" : "Додати мене до групи друзів \"{group}\"",
