--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -5,6 +5,7 @@
   "add-donation" : "Добавить донат",
   "add-donation-button" : "Добавить донат",
   "add-friend" : "Добавить в друзья",
+  "add-friend-group" : "Добавить группу друзей",
   "add-group" : "Добавить группу",
   "additional" : "Дополнительные",
   "add-me-friend-group" : "Добавить меня в группу друзей \"{group}\"",
