Polish translation updated.

--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -5,6 +5,7 @@
   "add-donation" : "Dodaj darowiznę",
   "add-donation-button" : "Dodaj darowiznę",
   "add-friend" : "Dodaj do znajomych",
+  "add-friend-group" : "Dodaj grupę znajomych",
   "add-group" : "Dodaj grupę",
   "additional" : "Dodatkowe",
   "add-me-friend-group" : "Dodaj mnie do grupy znajomych \"{group}\"",
@@ -15,6 +16,9 @@
   "all" : "Wszystko",
   "allowed-oppose-reactions" : "Dozwolone reakcje \"Przeciw\"",
   "allowed-support-reactions" : "Dozwolone reakcje \"Za\"",
+  "allow-showing-blog-google-play" : "<0>Zezwalaj</0> na wyświetlanie bloga <1>{name}</1> na Androidzie (Google Play).",
+  "allow-showing-comment-google-play" : "<0>Zezwalaj</0> na wyświetlanie na Androidzie komentarza użytkownika <1>{commentName}</1> „{commentHeading}” do posta użytkownika <1>{postingName}</1> „{postingHeading}” (Google Play).",
+  "allow-showing-post-google-play" : "<0>Zezwalaj</0> na wyświetlanie posta użytkownika <1>{name}</1> „{heading}” na Androidzie (Google Play).",
   "alt-text" : "Tekst alternatywny",
   "alt-text-button" : "Tekst alternatywny",
   "ask" : "Zapytaj",
@@ -28,7 +32,9 @@
   "avatar-shape" : "Kształt awatara",
   "avatar-too-small" : "Rozmiar obrazka awatara powinien wynosić co najmniej 100x100 pikseli.",
   "back-to-feed" : "← {feed}",
+  "back-to-list-complains" : "← Lista komentarzy",
   "banned-android-google-play" : "Zablokowany na Androidzie (Google Play)",
+  "banned-content-android-google-play" : "Wszystkie treści zakazane na Androidzie (Google Play)",
   "bio" : "Opis",
   "block" : "Zablokuj",
   "blocked" : "Zablokowany",
@@ -47,10 +53,11 @@
   "change-date-time" : "Zmień datę/czas",
   "change-date-time-ellipsis" : "Zmień datę/czas...",
   "change-friend-groups" : "Zmień grupy znajomego {name}",
-  "change-groups" : "Zmień grupy znajomych",
+  "change-groups" : "Zmień grupy {gender, select, female {znajomej} other {znajomego}} {name}",
   "change-home-password" : "Zmień hasło do domu",
   "change-password" : "Zmień hasło",
   "change-password-ellipsis" : "Zmień hasło...",
+  "choose-decision" : "Proszę wybrać swoją decyzję...",
   "choose-request" : "Wybierz żądanie...",
   "clear-selection" : "Wyczyść wybór",
   "client-settings-changed-conflict" : "Ustawienia klienta zostały zmienione przez kogoś innego.",
@@ -61,11 +68,30 @@
   "comment-edited-conflict" : "Komentarz został edytowany przez kogoś.",
   "commenting-allowed-to" : "Komentowanie dozwolone dla",
   "comment-not-found" : "Nie znaleziono komentarza",
+  "comment-optional" : "Komentarz (opcjonalnie)",
   "comments" : "Komentarze",
   "comments-disabled" : "Komentarze są wyłączone",
   "comments-visible-to" : "Komentarze są widoczne dla",
   "comment-title" : "Komentarz",
   "comment-updated-at" : "zaktualizowany",
+  "complain-heading" : {
+    "blog" : "Blog {name}",
+    "comment" : "Komentarz {commentName} \"{commentHeading}\" do posta {postingName} \"{postingHeading}\"",
+    "post" : "Post {name} \"{heading}\""
+  },
+  "complains" : "Skargi",
+  "complain-status" : {
+    "approved" : "Zatwierdzone",
+    "invalid-target" : "Nieprawidłowe dane",
+    "not-found" : "Nie znaleziono",
+    "not-original" : "Nie jest oryginalnym postem",
+    "not-sheriff" : "Nie rządzony",
+    "posted" : "W trakcii przetwarzania",
+    "prepared" : "Gotowy do recenzji",
+    "prepare-failed" : "Nie mógł być przetwarzany",
+    "rejected" : "Odrzucone"
+  },
+  "complain-status-colon" : "Stan skargi",
   "compress-images" : "Kompresuj obrazy",
   "confirm-password" : "Potwierdź hasło",
   "connect" : "Połącz",
@@ -96,6 +122,9 @@
   "create-token" : "Utwórz token",
   "current" : "Obecny",
   "current-password" : "Obecne hasło",
+  "decision" : "Decyzja",
+  "decision-sheriff-initiative" : "Decyzja została podjęta z inicjatywy szeryfa.",
+  "decision-upon-complain" : "Decyzja została podjęta po <0>skardze</0> złożonej przez innego użytkownika.",
   "delete" : "Usuń",
   "delete-comment" : "Czy na pewno chcesz usunąć komentarz \"{heading}\"?",
   "delete-draft" : "Usuń szkic",
@@ -105,7 +134,9 @@
   "deny-comments-reactions" : "Zabroń komentarzy i reakcji",
   "deny-everything-hide" : "Zabroń wszystkiego i ukryj w dyskusjach",
   "deny-everything-hide-in-discussion" : "Zabroń wszystkiego i ukryj w dyskusji",
+  "deny-showing-blog-google-play" : "<0>Odrzuć</0> wyświetlanie bloga <1>{name}</1> na Androidzie (Google Play).",
   "description" : "Opis",
+  "details" : "Szczegóły",
   "details-blocking" : "Szczegóły blokowania",
   "details-blocking-by-name" : "Szczegóły blokowania przez {name}",
   "details-blocking-name" : "Szczegóły blokowania {name}",
@@ -162,7 +193,7 @@
   "failure-reason" : "Powód niepowodzenia",
   "feed-title" : {
     "news" : "Aktualności",
-    "timeline" : "Oś czasu"
+    "timeline" : "Kronika"
   },
   "female" : "Kobieta",
   "female-short" : "k.",
@@ -176,9 +207,14 @@
   "forgot-home-password" : "Zapomniałem hasła do domu",
   "forgot-password" : "Zapomniałem hasła",
   "formatting-hint" : "<0>Markdown:</0> zobacz <1>cheatsheet</1> lub <2>poradnik</2>, aby dowiedzieć się, jak zrobić więcej. Zobacz również <3>emoji cheatsheet</3>.",
-  "friend" : "Przyjaciel",
-  "friend-groups" : "Grupy przyjaciół...",
-  "friend-groups.friends" : "Przyjaciele",
+  "friend" : "Znajomyj",
+  "friend-groups" : "Grupy znajomych...",
+  "friend-groups.friends" : "Znajomy",
+  "friend-group-visibility" : {
+    "admin" : "Prywatny",
+    "private" : "Tylko dla członków",
+    "public" : "Publiczne"
+  },
   "from-computer" : "Z komputera",
   "from-device" : "Z urządzenia",
   "from-internet" : "Z internetu",
@@ -196,7 +232,7 @@
   "hide-blog-google-play" : "Nie pokazuj bloga <0>{name}</0> w Androidzie (Google Play).",
   "hide-comment-google-play" : "Nie pokazuj komentarza \"{heading}\" w Androidzie (Google Play).",
   "hide-ellipsis" : "Ukryj...",
-  "hide-friendship" : "Ukryj przyjaźń",
+  "hide-friendship" : "Ukryj znajomość",
   "hide-hidden-comments" : "Ukryj ukryte komentarze",
   "hide-in-discussion" : "Ukryj w dyskusji",
   "hide-in-discussions" : "Ukryj w dyskusjach",
@@ -232,7 +268,7 @@
   "instants" : "Powiadomienia",
   "instant-summary" : {
     "and" : "i",
-    "and-others" : "i {count} {count, plural, one {inny} few {inni} many {innych}}",
+    "and-others" : "i {count} {count, plural, one {inna} few {inni} other {innych}} {count} {count, plural, one {osoba} other {osoby}}",
     "blocked-comment" : "komentowanie",
     "blocked-period" : "na {days} {days, plural, one {dzień} few {dni} many {dni}}",
     "blocked-reaction" : "dodawanie reakcji do",
@@ -251,8 +287,8 @@
       "user" : "zapisano się do twojego"
     },
     "story" : {
-      "asked-to-friend" : "{node} poprosił cię o dodanie {gender, select, male {go} female {ją} other {ich}} do znajomych",
-      "asked-to-friend-group" : "{node} poprosił cię o dodanie {gender, select, male {go} female {ją} other {ich}} do grupy znajomych \"{group}\"",
+      "asked-to-friend" : "{node} {gender, select, female {poprosiła} other {poprosił}} cię o dodanie {gender, select, male {go} female {ją} other {ich}} do znajomych",
+      "asked-to-friend-group" : "{node} {gender, select, female {poprosiła} other {poprosił}} cię o dodanie {gender, select, male {go} female {ją} other {go}} do znajomych \"{group}\"",
       "asked-to-subscribe" : "{node} poprosił cię o zapisanie się do {gender, select, male {jego} female {jej} other {ich}} kanału",
       "blocked-user" : "{node} zablokował/a Cię przed {operations} {gender, select, male {jego} female {jej} other {ich}} postami {period}",
       "blocked-user-in-posting" : "{node} zablokował/a Cię przed {operations} {gender, select, male {jego} female {jej} other {ich}} postem {heading} {period}",
@@ -264,10 +300,10 @@
       "comment-reaction-task-failed" : "Nie udało się zareagować na komentarz {commentNode} {commentHeading} do posta {postingNode} {postingHeading}",
       "comment-update-task-failed" : "Nie udało się zaktualizować komentarza {commentHeading} do posta {node} {postingHeading}",
       "friend-added" : "{node} dodał/a Cię do grupy znajomych \"{group}\"",
-      "friend-added-to-friends" : "{node} dodał/a Cię do {gender, select, female {jej} other {jego}} znajomych",
-      "friend-deleted" : "{node} usunął/a Cię z grupy znajomych \"{group}\"",
-      "friend-deleted-from-friends" : "{node} usunął/a Cię z {gender, select, female {jej} other {jego}} znajomych",
-      "friend-group-deleted" : "{node} usunął/a grupę znajomych \"{group}\"",
+      "friend-added-to-friends" : "{node} {gender, select, female {dodała} other {dodał}} Cię do znajomych",
+      "friend-deleted" : "{node} {gender, select, female {usunąła} other {usunął}} Cię z grupy znajomych \"{group}\"",
+      "friend-deleted-from-friends" : "{node} {gender, select, female {usunąła} other {usunął}} Cię z {gender, select, female {jej} other {jego}} znajomych",
+      "friend-group-deleted" : "{node} {gender, select, female {usunąła} other {usunął}} grupe znajomych \"{group}\"",
       "mention-comment" : "{node} wspomniał/a o Tobie w komentarzu {commentHeading} na {posting} {postingHeading}",
       "mention-posting" : "{node} wspomniał/a o Tobie w poście {heading}",
       "posting-media-reaction-added" : "{reactions} zareagował/a na media w Twoim poście {heading} na {node}",
@@ -280,12 +316,16 @@
       "reaction-added" : "{reactions} zareagował na Twój post {heading}",
       "remote-comment-added" : "{comments} skomentował {posting} {heading} {reason}",
       "reply-comment" : "{replies} odpowiedział na Twój komentarz {heading} w {posting}",
+      "sheriff-complain-added" : "Otrzymałeś nową skargę",
       "subscriber-added" : "{node} zasubskrybował Twój {feed}",
       "subscriber-deleted" : "{node} wypisał się z subskrypcji Twojego {feed}",
       "unblocked-user" : "{node} pozwolił Ci {operations} na {gender, select, male {jego} female {jej} other {ich}} posty",
       "unblocked-user-in-posting" : "{node} pozwolił Ci {operations} na {gender, select, male {jego} female {jej} other {ich}} post {heading}"
     },
-    "supported" : "wspierany",
+    "supported" : "{count, plural, =1 {{gender, select, female {poparla} other {poparl}}} other {poparly}}",
+    "target-your-blog" : "twój blog",
+    "target-your-comment" : "twój komentarz {heading} do {posting}",
+    "target-your-post" : "twój post {heading}",
     "their-post" : "{gender, select, male {jego} female {jej} other {ich}} post",
     "your-post" : "Twój post"
   },
@@ -354,10 +394,13 @@
   "nothing-yet" : "Jeszcze nic.",
   "notify-about-update" : "Powiadom obserwujących o aktualizacji",
   "notify-followers" : "Powiadom obserwujących",
+  "not-publish-my-complain" : "Proszę nie publikować mojej skargi",
+  "not-show-complains" : "Nie pokazuj skarg",
   "not-specified" : "Nie określono",
   "not-subscribed" : "Nie zasubskrybowano",
   "not-valid-e-mail" : "Nieprawidłowy adres e-mail",
   "ok" : "OK",
+  "only-new" : "Tylko nowe",
   "only-selected-allowed" : "Dozwolone tylko wybrane",
   "only-selected-allowed-star-preferred" : "Dozwolone tylko wybrane, oznaczone <0/> są preferowane",
   "open" : "Otwórz",
@@ -419,10 +462,10 @@
     "title" : "Szybkie wskazówki",
     "visit-desktop" : "Aby odwiedzić czyjś blog, kliknij <0/> w lewym górnym rogu i wpisz nazwę bloga.",
     "visit-mobile" : "Aby odwiedzić czyjś blog, kliknij <0/> w górnym panelu i wpisz nazwę bloga.",
-    "your-news" : "twój kanał informacyjny;",
+    "your-news" : "twóje Aktualności;",
     "your-notifications" : "twoje powiadomienia;",
     "your-settings" : "Twoje ustawienia;",
-    "your-timeline" : "Twój czasopunkt."
+    "your-timeline" : "twoja Kronika."
   },
   "quote" : "Cytat",
   "quote-copied" : "Cytat skopiowany do schowka",
@@ -473,11 +516,15 @@
   "register-different-name" : "Zarejestruj inną nazwę",
   "registered-name-secret" : "Tajna nazwa zarejestrowana",
   "register-new-name" : "Zarejestruj nową nazwę",
+  "reject" : "Odrzuć",
   "rename" : "Zmień nazwę",
   "rename-token" : "Zmień nazwę tokena",
   "reply" : "Odpowiedz",
   "reply-ellipsis" : "Odpowiedz...",
   "reply-prev-comment" : "Odpowiedz na poprzedni komentarz",
+  "report-sheriff-ellipsis" : "Zgłoś do szeryfa...",
+  "report-sheriff-sent" : "Skarga została wysłana do szeryfa",
+  "report-sheriff-title" : "Skarga do szeryfa",
   "resend-mail" : "Wyślij maila ponownie",
   "reset-password" : "Zresetuj hasło",
   "reset-password-hint-instructions" : "Wiadomość została wysłana na Twój adres e-mail <b>{emailHint}</b> z kodem potrzebnym do zresetowania hasła. Proszę wprowadź go w polu poniżej.",
@@ -554,7 +601,7 @@
           "auto" : "Automatycznie"
         },
         "naming_location" : "Lokalizacja serwera nazw",
-        "news-button_target-story" : "Przycisk \"Twoje wiadomości\" otwiera",
+        "news-button_target-story" : "Przycisk \"Twoje aktualności\" otwiera",
         "news-button_target-story-items" : {
           "earliest-new" : "Najwcześniejszy nowy post",
           "latest" : "Najnowszy post"
@@ -564,7 +611,7 @@
         "posting_comments_addition_default" : "Domyślnie zezwól na komentowanie",
         "posting_comments_hide_default" : "Domyślnie ukrywaj komentarze automatycznie",
         "posting_comments_visibility_default" : "Domyślna widoczność komentarzy",
-        "posting_feed_news_enabled" : "Dodaj swoje posty do swojego kanału informacyjnego",
+        "posting_feed_news_enabled" : "Dodawaj wlasne posty do swoich \"Aktualności\"",
         "posting_media_compress_default" : "Domyślnie kompresuj obrazy w postach",
         "posting_reactions_enabled_default" : "Domyślnie zezwól na reakcje na mój post",
         "posting_reactions_negative_default" : "Domyślny zestaw reakcji \"Przeciwny\" na mój post",
@@ -592,7 +639,7 @@
       }
     },
     "node" : {
-      "ask_friend_allowed" : "Zezwól na prośby o przyjaźń",
+      "ask_friend_allowed" : "Zezwól na prośby o znajomość",
       "ask_interval" : "Nie częściej niż raz na",
       "ask_subscribe_allowed" : "Zezwól na prośby o subskrypcję",
       "ask_total_max" : "Nie więcej niż",
@@ -604,10 +651,10 @@
       "comment_revision_lifetime" : "Usuń stare wersje komentarzy po",
       "credentials-reset_token_lifetime" : "Unieważnij kod do resetowania hasła po",
       "feed_width" : "Szerokość kanału (w pikselach)",
-      "friend-ofs_view" : "Lista osób, które mnie dodały jako przyjaciela, jest widoczna dla",
-      "friend-ofs_view-total" : "Liczba osób, które mnie dodały jako przyjaciela, jest widoczna dla",
-      "friends_view" : "Lista przyjaciół jest widoczna dla",
-      "friends_view-total" : "Liczba przyjaciół jest widoczna dla",
+      "friend-ofs_view" : "Lista osób, które mnie dodały jako znajomego, jest widoczna dla",
+      "friend-ofs_view-total" : "Liczba osób, które mnie dodały jako znajomego, jest widoczna dla",
+      "friends_view" : "Lista znajomych jest widoczna dla",
+      "friends_view-total" : "Liczba znajomych jest widoczna dla",
       "instants_lifetime" : "Usuń powiadomienia po",
       "instants_viewed_lifetime" : "Usuń wyświetlone powiadomienia po",
       "media_max-size" : "Maksymalny rozmiar przesłanego pliku multimedialnego",
@@ -615,8 +662,8 @@
       "media_verification_max-size" : "Maksymalny rozmiar pobranego pliku multimedialnego do weryfikacji",
       "naming_location" : "Lokalizacja serwera nazw",
       "naming_unavailable_max-retries" : "Liczba prób połączenia z serwerem nazw",
-      "news_lifetime" : "Usuń wiadomości po",
-      "news_purge-pinned" : "Usuń przypięte wiadomości",
+      "news_lifetime" : "Usuń aktualności po",
+      "news_purge-pinned" : "Usuwaj przypięte aktualności",
       "posting_deleted_lifetime" : "Usuń usunięte posty po",
       "posting_draft_lifetime" : "Usuń szkice postów po",
       "posting_image_recommended-pixels" : "Maksymalna rozdzielczość skompresowanego obrazu w poście (w pikselach)",
@@ -624,7 +671,7 @@
       "posting_max-size" : "Maksymalny rozmiar postów",
       "posting_media_max-size" : "Maksymalny rozmiar załącznika multimedialnego w poście",
       "posting_non-admin_allowed" : "Zezwól na dodawanie postów przez dowolnego użytkownika (eksperymentalne)",
-      "posting_picked_hide-on-delete" : "Nie usuwaj postów z kanału informacyjnego, gdy oryginał zostanie usunięty",
+      "posting_picked_hide-on-delete" : "Nie usuwaj postów z \"Aktualności\", gdy oryginał zostanie usunięty",
       "posting_picked_revision_lifetime" : "Usuń stare wersje wybranych postów po",
       "posting_revealed_notification_age" : "Powiadom subskrybentów o otwarciu zamkniętego posta, jeśli jest nowszy niż",
       "posting_revision_lifetime" : "Usuń stare wersje postów po",
@@ -644,7 +691,7 @@
       "subscription_auto_node" : "Automatycznie subskrybuj blog",
       "subscriptions_view" : "Lista subskrypcji jest widoczna dla",
       "subscriptions_view-total" : "Liczba subskrypcji jest widoczna dla",
-      "token_lifetime" : "Czas życia tokena autoryzacyjnego",
+      "token_lifetime" : "Żywotność tokena autoryzacyjnego",
       "webmaster_email" : "E-mail webmastera",
       "webmaster_name" : "Nazwa webmastera",
       "webui_allow-indexing" : "Zezwól na indeksowanie bloga przez wyszukiwarki",
@@ -656,7 +703,8 @@
       "addons" : "Dodatki",
       "appearance" : "Wygląd",
       "comment" : "Komentarz",
-      "news" : "Wiadomości",
+      "moderation" : "Moderacja",
+      "news" : "Aktualności",
       "notifications" : "Powiadomienia",
       "other" : "Inne",
       "posting" : "Publikowanie",
@@ -683,6 +731,7 @@
     "threat" : "Zagrożenia",
     "unlawful" : "Naruszenie prawa"
   },
+  "sheriff-order-sent" : "Rozkaz szeryfa został wysłany",
   "show-formatting-hint" : "Pokaż podpowiedź formatowania",
   "show-hidden-comments" : "Pokaż ukryte komentarze",
   "show-list-reactions" : "Pokaż szczegółową listę reakcji",
@@ -718,6 +767,7 @@
   "tooltip" : "Podpowiedź",
   "top" : "Góra",
   "to-post" : "← Post",
+  "total-colon" : "Całkowite",
   "transfer" : "Przenieś",
   "transfer-existing-name" : "Przenieś istniejącą nazwę",
   "transfer-existing-name-button" : "Przenieś istniejącą nazwę",
@@ -757,6 +807,7 @@
   "view-as-chart" : "Wyświetl jako wykres",
   "view-as-list" : "Wyświetl jako listę",
   "view-comments" : "Wyświetl komentarze",
+  "view-complains" : "Pokaż skargi",
   "view-earlier-comments" : "Wyświetl wcześniejsze komentarze",
   "view-images-grid" : "Wyświetl obrazy jako siatkę",
   "view-images-list" : "Wyświetl obrazy jako listę",
@@ -780,12 +831,13 @@
   "yes" : "Tak",
   "you-at-home" : "Jesteś w swoim węźle domowym",
   "you-can-copy-token" : "Możesz teraz skopiować swój nowy token. Ze względów bezpieczeństwa nie będzie to możliwe później.",
-  "you-friends" : "Jesteś znajomymi",
-  "your-news" : "Twoje wiadomości",
+  "you-friends" : "Jesteście znajomymi",
+  "you-no-longer-subscribed" : "Nie jesteś już subskrybentem",
+  "your-news" : "Twoje aktualności",
   "your-password" : "Twoje hasło",
   "your-profile" : "Twój profil",
   "your-settings" : "Twoje ustawienia",
-  "your-timeline" : "Twój czas",
+  "your-timeline" : "Twoja kronika",
   "you-subscribed" : "Jesteś subskrybentem",
   "zoom-in" : "Powiększ",
   "zoom-out" : "Pomniejsz"
