Display a message box, when an operation cannot be completed, because you're banned.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -99,7 +99,7 @@
   "connect-home" : "Connect to Home",
   "connecting" : "Connecting",
   "content-hidden-in-google-play" : "All content is hidden in Android (Google Play)",
-  "content-not-accessible-android" : "This content is not accessible on Android.",
+  "content-not-accessible-android" : "This content is not accessible on Android",
   "content-unhidden-in-google-play" : "All content is unhidden in Android (Google Play)",
   "continue-reading" : "Continue Reading →",
   "copy" : "Copy",
@@ -757,6 +757,7 @@
   "signature-verification-in-progress" : "Signature verification in progress",
   "sign-up" : "Sign Up",
   "size" : "Size",
+  "sorry-you-banned" : "Sorry, you cannot perform this operation, because the author has banned you.",
   "spoiler" : "Spoiler",
   "spoiler-alert" : "spoiler!",
   "stop-asking" : "Stop asking",
