--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -99,7 +99,7 @@
   "connect-home" : "Подключиться к дому",
   "connecting" : "Подключение",
   "content-hidden-in-google-play" : "Весь контент скрыт в Android (Google Play)",
-  "content-not-accessible-android" : "Этот контент недоступен на Android.",
+  "content-not-accessible-android" : "Этот контент недоступен на Android",
   "content-unhidden-in-google-play" : "Весь контент раскрыт в Android (Google Play)",
   "continue-reading" : "Читать дальше →",
   "copy" : "Копировать",
@@ -757,6 +757,7 @@
   "signature-verification-in-progress" : "Идёт проверка подписи",
   "sign-up" : "Регистрация",
   "size" : "Размер",
+  "sorry-you-banned" : "К сожалению, вы не можете выполнить эту операцию, так как автор забанил вас.",
   "spoiler" : "Спойлер",
   "spoiler-alert" : "спойлер!",
   "stop-asking" : "Больше не спрашивать",
