--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -99,7 +99,7 @@
   "connect-home" : "Підключитись до дому",
   "connecting" : "Підключення",
   "content-hidden-in-google-play" : "Весь контент приховано у Android (Google Play)",
-  "content-not-accessible-android" : "Цей контент недоступний на Android.",
+  "content-not-accessible-android" : "Цей контент недоступний на Android",
   "content-unhidden-in-google-play" : "Весь контент розкрито у Android (Google Play)",
   "continue-reading" : "Читати далі →",
   "copy" : "Копіювати",
@@ -757,6 +757,7 @@
   "signature-verification-in-progress" : "Йде перевірка підпису",
   "sign-up" : "Реєстрація",
   "size" : "Розмір",
+  "sorry-you-banned" : "На жаль, ви не можете здійснити цю операцію, оскільки автор забанив вас.",
   "spoiler" : "Спойлер",
   "spoiler-alert" : "спойлер!",
   "stop-asking" : "Припинити питати",
